Add philosophy page

--- a/docs/sciences/philosophy.mdx
+++ b/docs/sciences/philosophy.mdx
@@ -3,5 +3,99 @@ sidebar_position: 18
 draft: true
 ---
 
+import Tabs from '@theme/Tabs';
+import TabItem from '@theme/TabItem';
+import HisyeoTabs from '@site/src/components/HisyeoTabs'
+import HisyeoText from '@site/src/components/HisyeoText'
+import HisyeoWord from '@site/src/components/HisyeoWord'
+import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
+
 # Philosophy
 
+Philosophy is the study of tolîko kon oncêmon (perspective). In Hîsyêô, philosophy is not an academic exercise but a practical toolkit for dismantling the Shards of tyranny in one's own mind. It is the domain of [Suluswutî](../religion/gods/suluswutî) (The Questioner) and [Xôcibîlî](../religion/gods/xôcibîlî) (The Reflector).
+
+## Core Concepts
+
+| English     | Hîsyêô                                               | Literal Meaning             |
+|-------------|------------------------------------------------------|-----------------------------|
+| Philosophy  | <HisyeoText>bêûdo yê tolîko kon oncêmon</HisyeoText> | Study of Perspective |
+| Truth       | <HisyeoWord is='hokîkî'/>                            | Authenticness               |
+| Perspective | <HisyeoText>tolîko kon oncêmon</HisyeoText> | Perceiving Method           |
+| Logic       | <HisyeoWord is='montûksol'/>                         | Logicalness              |
+| Ethics      | <HisyeoWord is='ûsowo'/>                             | Equity / Fairness           |
+| Question    | <HisyeoWord is='sôlû'/>                              | To ask (Verb) / Question (Noun)  |
+| Answer      | <HisyeoWord is='zuwobû'/>                              | To answer (Verb) / Answer (Noun)  |
+
+<HisyeoTabs>
+    <p>tolîko kon oncêmon nîmû ondo nucoto nîmû.&emsp;<em>Your perspective creates your world.</em></p>
+</HisyeoTabs>
+
+## Epistemology (Study of Knowledge)
+
+Epistemology explores the nature, origin, and limits of human knowledge, asking how we know what we know.
+
+### Major Schools
+
+- **Empiricism:** Knowledge comes from <HisyeoWord is='dêko'/> (observation) and <HisyeoWord is='dênêmêk'/> (testing). This aligns with the Scientific Method.
+
+- **Rationalism:** Knowledge comes from <HisyeoWord is='montûksol'/> (reason) and the structure of the mind itself.
+
+- **Constructivism:** Reality is a <HisyeoWord is='wofok'/> (agreement) constructed by society.
+
+  **Hîsyêô Perspective:** The [First Law](../religion/first-law) represents absolute, static Truth (Platonism). The [Shattering](../religion/shattering) introduced Multiplicity, favoring **Nominalism**—universals are just names we give to collections of unique things.
+
+## Ethics (Study of Right Action)
+
+Ethics explores the question: **How should we live?**
+
+### Major Frameworks
+
+- **Deontology:** Rules and duties. "Do what is right because it is the rule." (Associated with the First Law's rigidity).
+
+- **Utilitarianism:** The greatest good for the greatest number.
+
+- **Virtue Ethics:** Cultivating character traits of [Bostet](../religion/gods/bostet) (the emodiment of Empathy) and of <HisyeoWord is='fôgîcîn'/> (Curiosity).
+
+  **Hîsyêô Perspective:** Hîsyêô ethics rejects the binary of "Good" and "Evil." Instead, actions are evaluated by <HisyeoWord is='ûsowo'/> (Equity/Balance) and <HisyeoWord is='yoldûn'/> (Help/Aid). Justice is not punishment; it is the restoration of the Weave.
+
+## Metaphysics (Study of Existence)
+
+In general philosophy, this field asks *What is real?*
+
+- **Materialism:** Only matter (<HisyeoWord is='kûsowî'/>) exists. The mind is a machine (<HisyeoWord is='culono'/>).
+
+- **Idealism:** Only the mind (<HisyeoWord is='dûuncît'/>) exists. Matter is a dream (<HisyeoWord is='hôlmo'/>).
+
+- **Dualism:** Mind and Matter are separate substances.
+
+  **Hîsyêô Perspective:** Hîsyêô is **Panpsychist**. Consciousness is a fundamental property of the universe (The Divine Mind), and matter is the "Dream" of the [Cosmic Soul](../religion/metaphysics#the-cosmic-soul).
+
+:::tip More Info
+
+See the full [Metaphysics](../religion/metaphysics) page for the Hîsyêô-specific cosmology.
+
+:::
+
+## Political Philosophy
+
+The study of power (<HisyeoWord is='hûkun'/>) and society (<HisyeoWord is='zomî'/>).
+
+- **Anarchism:** The rejection of hierarchy (<HisyeoWord is='dês'/> <HisyeoWord is='hûkun'/>). Order arises from free agreement (<HisyeoWord is='wofok'/> <HisyeoWord is='zomo'/> <HisyeoWord is='mûlû'/>).
+
+- **Socialism:** Social ownership of the means of production (<HisyeoWord is='fuî'/> <HisyeoWord is='fîmôsyôs'/>).
+
+- **Liberalism:** Focus on individual rights and the social contract.
+
+  **Hîsyêô Perspective:** The culture is **Anti-Authoritarian** but structurally organized. It rejects the State (centralized command) as a "Shard" of the First Law, but it embraces the Participatory Network of the Weave. It utilizes markets and price signals to coordinate complex needs, but these are managed through collective planning (domain of [Tîengûun](../religion/gods/tîêngûun)) rather than capitalist accumulation. The goal is individual autonomy within a robust, non-coercive support structure.
+
+## Aesthetics (Study of Beauty)
+
+What is beauty (<HisyeoWord is='hosîn'/>)?
+
+- **Objectivism:** Beauty is inherent in the object (Symmetry, Order).
+
+- **Subjectivism:** Beauty is in the eye of the beholder (<HisyeoWord is='oncêmon'/> <HisyeoWord is='umo'/>).
+
+  **Hîsyêô Perspective:** Hîsyêô culture has a very open perspective on beauty but there is an incliination towards appreciating vitality and function. A static, perfect crystal is less beautiful than a messy, growing forest (Dimîtu).
+
+<HisyeoTooltip />
