Add literary studies science doc

--- a/docs/sciences/literary-studies.mdx
+++ b/docs/sciences/literary-studies.mdx
@@ -12,7 +12,145 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 
 # Literary Studies
 
+Literary Studies is the examination of <HisyeoWord is='cukto'/> (writing) and <HisyeoWord is='kîso'/> (stories). In Hîsyêô culture, stories are not merely entertainment; they are the threads that bind the [Great Weave](../religion/great-weave) together. This discipline is guided by [Suluswutî](../religion/gods/suluswutî) (Learning) and [Xôcibîlî](../religion/gods/xôcibîlî) (Expression).
 
+## Core Concepts
+
+<HisyeoTabs>
+    <p>kon cukto li kuûnmê yê kon oncêmon yê tônkô dîzel&emsp;<em>Literature is the technology of empathy.</em></p>
+</HisyeoTabs>
+
+| English    | Hîsyêô                                | Literal Meaning   |
+|------------|---------------------------------------|-------------------|
+| Literature | <HisyeoWord is='cukto'/>              | To write (Verb) / Text (Noun)           |
+| Story      | <HisyeoWord is='kîso'/>               | To narrate (Verb) / Story (Noun) |
+| Book       | <HisyeoWord is='tômôs'/>               | Book              |
+| Poetry     | <HisyeoText>cukto kîno</HisyeoText> | Rhyme/Verse text   |
+| Author     | <HisyeoText>ônî cukto</HisyeoText>    | The writing one   |
+| Reader     | <HisyeoText>ônî golo</HisyeoText>     | The reading one   |
+| Meaning    | <HisyeoWord is='betîdo'/>             | To mean (Verb) / Meaning (Noun) |
+
+## Narrative Theory
+
+Hîsyêô literary theory rejects the "Hero's Journey" (which centers a single individual conquering the world) in favor of the Weave Structure (where multiple threads intersect to create a pattern).
+
+- <HisyeoText><strong>Plot:</strong> tîton yê kîso&emsp;<small>(Path of the story)</small></HisyeoText>
+- <HisyeoText><strong>Character:</strong> umo yê kîso&emsp;<small>(Person of the story)</small></HisyeoText>
+- <HisyeoText><strong>Theme:</strong> selôhô</HisyeoText>
+- <HisyeoText><strong>Conflict:</strong> gûexo xe gitno tolîko kon oncêmon&emsp;<small>(Conflict between perspectives)</small></HisyeoText>
+
+<HisyeoTabs>
+    <p>û kîso xôn fuî êto doî.&emsp;<em>A good story has many threads.</em></p>
+</HisyeoTabs>
+
+## Genres
+
+Genres are described by the intent or content of the work.
+
+| English     | Hîsyêô                               | Literal Meaning           |
+|-------------|--------------------------------------|---------------------------|
+| Fiction     | <HisyeoText>kîso hûdul</HisyeoText>  | False story (Non-factual) |
+| Non-Fiction | <HisyeoText>kîso hokîkî</HisyeoText> | Truth story               |
+| Fantasy     | <HisyeoText>kîso hôlmo</HisyeoText> | Dream story         |
+| History     | <HisyeoText>kîso itihos</HisyeoText>  | History story               |
+| Drama       | <HisyeoText>kîso kûnbî</HisyeoText> | Stage story              |
+| Comedy      | <HisyeoText>kîso yoûmok</HisyeoText> | Humorous story                |
+
+## Poetry & Aesthetics
+
+Poetry is the attempt to make language behave like music. Many critics argue that poetry organizes language to bypass the logical brain and hit the nervous system directly, much like a melody.
+
+### The Aspiration to "Pure Form"
+
+As the critic [Walter Pater](https://en.wikipedia.org/wiki/Walter_Pater) wrote, *"All art constantly aspires towards the condition of music."*
+
+- **In Music:** The form is the content. A chord does not need to "mean" anything to create emotion.
+- **In Literature:** Words are burdened by definitions (semantics). The poet struggles to make the Sound carry the weight, even if the definition is ignored.
+
+### Mechanics of Musicality
+
+Poets use specific tools, **Prosody** (<HisyeoWord is='konwo'/> <HisyeoWord is='hîskûnco'/>) to turn speech into performance.
+
+1. **Rhythm:** <HisyeoWord is='konwo'/> - Just as music has a time signature, poetry has meter to organize time and expectation.
+2. **Pitch:** <HisyeoWord is='nodu'/> - Controlled by vowel sounds.
+   - **High/Bright:** Long 'E' / Short 'I' (gleam, bit).
+   - **Low/Dark:** Long 'O' / 'U' (gloom, moon).
+
+3. <HisyeoText><strong>Texture:</strong> oncêmon yê kon tenkîn yê ôîtun</HisyeoText>
+   - <HisyeoText><strong>Cacophony:</strong> ôîtun gûexo&emsp;<small>(Conflict sound)</small></HisyeoText>Hard consonants (K, T, P) for percussion.
+   - <HisyeoText><strong>Euphony:</strong> ôîtun sontî&emsp;<small>(Peace sound)</small></HisyeoText>Soft consonants (L, M, S) for flow.
+
+### The Struggle
+
+The modernist [Ezra Pound](https://en.wikipedia.org/wiki/Ezra_Pound) warned: *"Music rots when it gets too far from the dance. Poetry atrophies when it gets too far from music."*
+
+However, poetry can never *fully* be music because words are referential. "Apple" will always make you think of a fruit. The Symbolist poets tried to dissolve this meaning to leave only the musical impression (*"De la musique avant toute chose"*), but the tension between **Sound** and **Sense** remains the defining feature of the art.
+
+<HisyeoTabs>
+    <p>û cukto misli nô wowoê (til xe gîk hoî boxô); cukto konwo misli cifulo (til nô yê cizî ni).&emsp;<em>Prose is like walking (to get somewhere); poetry is like dancing (for the movement itself).</em></p>
+</HisyeoTabs>
+
+
+## Literary Criticism
+
+When analyzing a text, Hîsyêô scholars look for Shards and Threads.
+
+### 1\. Identifying Shards
+
+Does the text promote the [First Law](../religion/first-law)?
+- Does it celebrate unearned hierarchy?
+- Does it present war as glorious?
+- Does it silence marginalized voices?
+
+### 2\. Identifying Echoes
+
+Does the text reveal the lingering pain of the [Shattering](../religion/shattering)?
+- **Echoes** are distinct from Shards. Shards are the *impulse* to dominate; Echoes are the *trauma* that results from that violence.
+- Does the text explore misunderstanding, grief, or the fear of chaos?
+- Are characters acting out of malice (Shard) or out of woundedness (Echo)? Identifying the Echo allows for healing rather than judgment.
+
+### 3\. Identifying Threads
+
+Does the text contribute to the Weave?
+- Does it build empathy (domain of [Bostet](../religion/gods/bostet))?
+- Does it challenge authority (domain of [Suluswutî](../religion/gods/suluswutî))?
+- Does it celebrate unique identity (domain of [Xôcibîlî](../religion/gods/xôcibîlî))?
+
+## Translation
+
+Translation in Hîsyêô is known as <HisyeoWord is='dônûxin'/> <HisyeoWord is='hîskûnco'/> (literally "language conversion"). It is considered a sacred act of bridge-building, allowing threads from one part of the Weave to connect with another.
+
+<HisyeoTabs>
+    <p>dônûxin hîskûnco li êo sontî.&emsp;<em>Translation makes peace.</em></p>
+</HisyeoTabs>
+
+### The Translation Process
+
+Hîsyêô translators follow a three-step process to ensure the spirit of the text is preserved while adapting it to the values of the language.
+
+1. **Deconstruction (**<HisyeoWord is='fohoso'/>**):** Breaking the source text down into its core meaning units, stripping away the cultural baggage of the source language (like gender or hierarchy).
+
+2. **Transfer (**<HisyeoWord is='dônûxin'/>**):** Moving the core meaning across the gap into Hîsyêô concepts. This often involves simplifying complex grammar into compound words.
+
+3. **Reconstruction (**<HisyeoWord is='môtsilê'/>**):** Weaving the new Hîsyêô words into a sentence that flows with the proper radial time metaphors and egalitarian grammar.
+
+### Translation Concepts
+
+| English             | Hîsyêô                                           | Meaning                                        |
+|---------------------|--------------------------------------------------|------------------------------------------------|
+| Source Text         | <HisyeoText>cukto cok</HisyeoText>               | Departing text                                 |
+| Target Text         | <HisyeoText>cukto gîk</HisyeoText>               | Arriving text                                  |
+| Literal Translation | <HisyeoText>dônûxin yê xokôn lolû</HisyeoText>   | Each word translation (Word-for-word)          |
+| Dynamic Translation | <HisyeoText>dônûxin yê xokôn betîdo</HisyeoText> | Each meaning translation (Meaning-for-meaning) |
+| Untranslatable      | <HisyeoText>dês dônûxin hîskûnco</HisyeoText>    | Language-related un-convertible                |
+
+### Handling Untranslatables
+
+Some concepts from other languages are "Shards"—ideas that do not fit into the Hîsyêô worldview (e.g., gendered nouns, formal/informal address based on rank).
+
+**Strategy:** Translators use prepositions or compound words to describe the function of the untranslatable word rather than importing the word itself.
+
+**Example:** Instead of translating "King" directly, use <HisyeoWord is='ônî'/> <HisyeoWord is='hûkun'/> (The ruling one), emphasizing the action of ruling rather than an innate status. If necessary for the context of the story, translators add additional modifiers or choose a different nuclei entirely.
 
 <HisyeoTooltip />
 
