Fîx spelling and tooltips in math science doc

--- a/docs/sciences/mathematics.mdx
+++ b/docs/sciences/mathematics.mdx
@@ -11,18 +11,18 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 
 # Mathematics
 
-Mathematics, or sôhoûk, is considered the language of the First Law—the underlying logic of the universe before the Shattering. It is the study of quantity, structure, and change.
+Mathematics, or <HisyeoWord is='sôhoûk'/>, is considered the language of the First Law—the underlying logic of the universe before the Shattering. It is the study of quantity, structure, and change.
 
 ## Basic Vocabulary
 
 | English     | Hîsyêô       | Literal Meaning                        |
 |-------------|--------------|----------------------------------------|
-| Number      | mîkdol       | Amount / Number                        |
-| Zero        | xûnyu        | Void / Nothing                         |
-| Infinity    | sônsûs       | Endless / Infinite                     |
-| Equation    | wofok sôhoûk | Arithmetic proof                       |
-| Shape       | xîncûon      | Form / Shape                           |
-| Measurement | dûstu        | To measure (Verb) / Measurement (Noun) |
+| Number      | <HisyeoWord is='mîkdol'/>       | Amount / Number                        |
+| Zero        | <HisyeoWord is='xûnyu'/>        | Void / Nothing                         |
+| Infinity    | <HisyeoWord is='sônsûs'/>       | Endless / Infinite                     |
+| Equation    | <HisyeoWord is='wofok'/> <HisyeoWord is='sôhoûk'/> | Arithmetic proof                       |
+| Shape       | <HisyeoWord is='xîncûon'/>      | Form / Shape                           |
+| Measurement | <HisyeoWord is='dûstu'/>        | To measure (Verb) / Measurement (Noun) |
 
 ## Operations
 
@@ -30,23 +30,23 @@ Operations are often expressed using prepositions or specific verbs.
 
 | Operation        | Hîsyêô       | Example (2 + 2 = 4)                                                        |
 |------------------|--------------|----------------------------------------------------------------------------|
-| Plus (Add)       | ûn (and)     | <HisyeoText>dûî ûn dûî li nonkû.</HisyeoText>                              |
-| Minus (Subtract) | sûn (from)   | <HisyeoText>dûî sûn nonkû li dûî.</HisyeoText> (Two from four is two).     |
-| Times (Multiply) | xokôn (each) | <HisyeoText>dûî xokôn dûî li nonkû.</HisyeoText> (Two each two is four).   |
-| Divide           | fun (part)   | <HisyeoText>dûî fun nonkû li dûî.</HisyeoText> (Two parts of four is two). |
-| Equals           | li (is)      |                                                                            |
+| Plus (Add)       | <HisyeoWord is='ûn'/> (and)     | <HisyeoText>dûî ûn dûî li nonkû.</HisyeoText>                              |
+| Minus (Subtract) | <HisyeoWord is='sûn'/> (from)   | <HisyeoText>dûî sûn nonkû li dûî.</HisyeoText> (Two from four is two).     |
+| Times (Multiply) | <HisyeoWord is='xokôn'/> (each) | <HisyeoText>dûî xokôn dûî li nonkû.</HisyeoText> (Two each two is four).   |
+| Divide           | <HisyeoWord is='fun'/> (part)   | <HisyeoText>dûî fun nonkû li dûî.</HisyeoText> (Two parts of four is two). |
+| Equals           | <HisyeoWord is='li'/> (is)      |                                                                            |
 
 ## Algebra
 
 Algebra involves the study of symbols and the rules for manipulating these symbols.
 
-| English  | Hîsyêô           | Literal Meaning           |
-|----------|------------------|---------------------------|
-| Variable | mîkdol (des fisun) | Unknown number            |
-| Constant | mîkdol totsi     | Standing number           |
-| Function | ondo sôhoûk      | Arithmetic preparation    |
-| Graph    | toswîl sôhoûk    | Arithmetic drawing        |
-| To Solve | yosten           | To discover / To find out |
+| English  | Hîsyêô             | Literal Meaning           |
+|----------|--------------------|---------------------------|
+| Variable | <HisyeoText>mîkdol (dês fisun)</HisyeoText> | Unknown number            |
+| Constant | <HisyeoText>mîkdol totsi</HisyeoText>       | Standing number           |
+| Function | <HisyeoText>ondo sôhoûk</HisyeoText>        | Arithmetic preparation    |
+| Graph    | <HisyeoText>toswîl sôhoûk</HisyeoText>      | Arithmetic drawing        |
+| To Solve | <HisyeoText>yosten</HisyeoText>             | To discover / To find out |
 
 Example Problem:
 
@@ -57,7 +57,7 @@ Example Problem:
 
 ## Geometry
 
-Geometry (xîncûon) deals with the properties of space and the forms that occupy it.
+Geometry (<HisyeoWord is='xîncûon'/>) deals with the properties of space and the forms that occupy it.
 
 ### Fundamental Elements
 
@@ -88,19 +88,19 @@ Geometry (xîncûon) deals with the properties of space and the forms that occup
 
 ### Describing Polygons
 
-For shapes that do not have a specific name, you can construct a descriptive name using xîncûon (shape) followed by the number of sobô (sides).
+For shapes that do not have a specific name, you can construct a descriptive name using xîncûon (shape) followed by the number of sôbo (sides).
 
-Formula:&emsp;<HisyeoWord is='xîncûon'/>&emsp;<HisyeoWord is='yê'/>&emsp;+&emsp;[Number]&emsp;+&emsp;<HisyeoWord is='sobô'/>
+Formula:&emsp;<HisyeoWord is='xîncûon'/>&emsp;<HisyeoWord is='yê'/>&emsp;+&emsp;[Number]&emsp;+&emsp;<HisyeoWord is='sôbo'/>
 
 | English  | Hîsyêô         | Literal Meaning  |
 |----------|----------------|------------------|
-| Pentagon | xîncûon yê tîû sobô    | Shape of five sides  |
-| Hexagon  | xîncûon yê toû sobô    | Shape of six sides   |
-| Octagon  | xîncûon yê tukwos sobô | Shape of eight sides |
-| Polygon  | xîncûon yê êto sobô   | Shape of many sides |
+| Pentagon | <HisyeoText>xîncûon yê tîû sôbo</HisyeoText>    | Shape of five sides  |
+| Hexagon  | <HisyeoText>xîncûon yê toû sôbo</HisyeoText>    | Shape of six sides   |
+| Octagon  | <HisyeoText>xîncûon yê tukwos sôbo</HisyeoText> | Shape of eight sides |
+| Polygon  | <HisyeoText>xîncûon yê êto sôbo</HisyeoText>    | Shape of many sides |
 
 <HisyeoTabs>
-    <p>xîncûon yê toû sobô fuî toû sobô.&emsp;<em>A hexagon has six sides.</em></p>
+    <p>xîncûon yê toû sôbo fuî toû sôbo.&emsp;<em>A hexagon has six sides.</em></p>
 </HisyeoTabs>
 
 <HisyeoTooltip/>
