Fix formatting on the politics page

--- a/docs/sciences/politics.mdx
+++ b/docs/sciences/politics.mdx
@@ -38,17 +38,17 @@ horizontal systems (Weaves).
 
 ### Hierarchical Systems (The Shards)
 
-- **Monarchy:** <HisyeoText>kon bôklôn yê kut</HisyeoText> (Governance of one)
-- **Oligarchy:** <HisyeoText>kon bôklôn yê yoûtî</HisyeoText> (Governance of a few)
-- **Empire:** <HisyeoText>kûôcyo cênbô</HisyeoText> (Big nation/state)
-- **Tyranny:** <HisyeoText>odigon ûlzo</HisyeoText> (Excessive power)
+- <HisyeoText><strong>Monarchy:</strong> kon bôklôn yê kut&emsp;<small>(Governance of one)</small></HisyeoText>
+- <HisyeoText><strong>Oligarchy:</strong> kon bôklôn yê yoûtî&emsp;<small>(Governance of a few)</small></HisyeoText>
+- <HisyeoText><strong>Empire:</strong> kûôcyo cênbô&emsp;<small>(Big nation/state)</small></HisyeoText>
+- <HisyeoText><strong>Tyranny:</strong> odigon ûlzo&emsp;<small>(Excessive power)</small></HisyeoText>
 
 ### Horizontal Systems (The Weave)
 
-- **Democracy:** <HisyeoText>kon bôklôn yê môî</HisyeoText> (Rule of all)
-- **Republic:** <HisyeoText>kûôcyo yê umo</HisyeoText> (Nation of the people)
-- **Federation:** <HisyeoText>mozulis kûngîyo</HisyeoText> (Nation council)
-- **Commune:** <HisyeoText>niwos fîmôsyôs</HisyeoText> (Communal residence)
+- <HisyeoText><strong>Democracy:</strong> kon bôklôn yê môî&emsp;<small>(Rule of all)</small></HisyeoText>
+- <HisyeoText><strong>Republic:</strong> kûôcyo yê umo&emsp;<small>(Nation of the people)</small></HisyeoText>
+- <HisyeoText><strong>Federation:</strong> mozulis kûngîyo&emsp;<small>(Nation council)</small></HisyeoText>
+- <HisyeoText><strong>Commune:</strong> niwos fîmôsyôs&emsp;<small>(Communal residence)</small></HisyeoText>
 
 ### Participatory Economics & Politics
 
@@ -69,13 +69,13 @@ life.
 Instead of an invisible hand, Hîsyêô uses the Visible Hand of
 Tîengûun—conscious, collective planning.
 
-- **Participatory Planning:** <HisyeoText>kon yôcno zomo</HisyeoText> (Group
-  planning). Producers and consumers negotiate directly to determine what is
+- **Participatory Planning:** <HisyeoText>kon yôcno zomo&emsp;<small>(Group
+  planning).</small></HisyeoText> Producers and consumers negotiate directly to determine what is
   produced, ensuring that supply meets need without waste or exploitation.
-- **Social Ownership:** <HisyeoText>fuî fîmôsyôs</HisyeoText> (Communal
-  ownership). The means of production (factories, land) are owned by the
+- **Social Ownership:** <HisyeoText>fuî fîmôsyôs&emsp;<small>(Communal
+  ownership).</small></HisyeoText> The means of production (factories, land) are owned by the
   community as a whole, preventing the rise of a capitalist class.
-- **Self-Management:** <HisyeoText>kon hûkun cizî</HisyeoText> (Self-rule). Every
+- **Self-Management:** <HisyeoText>kon hûkun cizî&emsp;<small>(Self-rule).</small></HisyeoText> Every
   worker has a say in the decisions that affect their work, proportional to how
   much they are affected.
 - **Remuneration for Effort:** <HisyeoText>cifû fun mêdûson</HisyeoText> (Pay
@@ -100,9 +100,9 @@ Tîengûun—conscious, collective planning.
 
 In Hîsyêô culture, decision-making follows a cycle of Consensus rather than simple voting (which is seen as the tyranny of the majority).
 
-- **Proposal:** <HisyeoText>yôcno nêôs</HisyeoText> (New plan)
-- **Discussion:** <HisyeoText>kon kôto</HisyeoText> (Speech/Dialogue)
-- **Dissent:** <HisyeoText>bêsnêhot în kôntêsto</HisyeoText> (Opposing suggestions)
+- **Proposal:** <HisyeoText>yôcno nêôs&emsp;<small>(New plan)</small></HisyeoText>
+- **Discussion:** <HisyeoText>kon kôto&emsp;<small>(Speech/Dialogue)</small></HisyeoText>
+- **Dissent:** <HisyeoText>bêsnêhot în kôntêsto&emsp;<small>(Opposing suggestions)</small></HisyeoText>
 - **Agreement:** <HisyeoWord is='wofok'/>
 
 <HisyeoTabs>
@@ -113,11 +113,11 @@ In Hîsyêô culture, decision-making follows a cycle of Consensus rather than s
 
 Describing the interactions between groups.
 
-War: <HisyeoWord is='gûexo'/> (Conflict/War)
-Peace: <HisyeoWord is='sontî'/> (Calmness)
-Foreigner: <HisyeoText>ônî bolutê</HisyeoText> (The foreign one)
-Treaty: <HisyeoText>golo yê wofok</HisyeoText> (Document of agreements)
-Border: <HisyeoText>eloi kûôcyo</HisyeoText> (Nation/State boundary)
+- **War:** <HisyeoText>gûexo&emsp;<small>(Conflict/War)</small></HisyeoText>
+- **Peace:** <HisyeoText>sontî&emsp;<small>(Calmness)</small></HisyeoText>
+- **Foreigner:** <HisyeoText>ônî bolutê&emsp;<small>(The foreign one)</small></HisyeoText>
+- **Treaty:** <HisyeoText>golo yê wofok&emsp;<small>(Document of agreements)</small></HisyeoText>
+- **Border:** <HisyeoText>eloi kûôcyo&emsp;<small>(Nation/State boundary)</small></HisyeoText>
 
 <HisyeoTabs>
     <p>li xôn eswen û sontî en gûexo.&emsp;<em>Peace is better than war.</em></p>
