Spelling and Hisyeo component fixes

--- a/docs/lessons/food-and-drink.mdx
+++ b/docs/lessons/food-and-drink.mdx
@@ -77,20 +77,20 @@ A <HisyeoWord is='xolu'/> is used for both drinks (<HisyeoWord is='îskô'/>) an
 
 | English        | Hîsyêô                       |
 |----------------|------------------------------|
-| Fruit          | <HisyeoWord is='kûôxi    '/> |
-| Vegetable      | <HisyeoWord is='ûnfûnô   '/> |
-| Meat           | <HisyeoWord is='oksûn    '/> |
-| Legumes        | <HisyeoWord is='undofôl  '/> |
-| Cereal / Grain | <HisyeoWord is='kûkmut   '/> |
-| Nut            | <HisyeoWord is='ôzîl     '/> |
-| Bread          | <HisyeoWord is='bîek     '/> |
-| Pasta          | <HisyeoWord is='toliyo   '/> |
-| Fat / Grease   | <HisyeoWord is='cîbon    '/> |
-| Sugar / Sweet  | <HisyeoWord is='sûît     '/> |
-| Water          | <HisyeoWord is='xîmu     '/> |
-| Herb           | <HisyeoWord is='hôncôû   '/> |
-| Spice          | <HisyeoWord is='kîûngô   '/> |
-| Alcohol        | <HisyeoWord is='îskô cûbû'/> |
+| Fruit          | <HisyeoWord is='kûôxi'/> |
+| Vegetable      | <HisyeoWord is='ûnfûnô'/> |
+| Meat           | <HisyeoWord is='oksûn'/> |
+| Legumes        | <HisyeoWord is='undofôl'/> |
+| Cereal / Grain | <HisyeoWord is='kûkmut'/> |
+| Nut            | <HisyeoWord is='ôzîl'/> |
+| Bread          | <HisyeoWord is='bîek'/> |
+| Pasta          | <HisyeoWord is='toliyo'/> |
+| Fat / Grease   | <HisyeoWord is='cîbon'/> |
+| Sugar / Sweet  | <HisyeoWord is='sûît'/> |
+| Water          | <HisyeoWord is='xîmu'/> |
+| Herb           | <HisyeoWord is='hôncôû'/> |
+| Spice          | <HisyeoWord is='kîûngô'/> |
+| Alcohol        | <HisyeoWord is='îskô'/> <HisyeoWord is='cûbû'/> |
 
 ### Describing Flavor & Smell
 
