--- a/docs/lessons/occupation-arrangements.mdx
+++ b/docs/lessons/occupation-arrangements.mdx
@@ -171,7 +171,7 @@ Organizing schedules for work often involves specific verbs for meeting and plan
 | Plan / Arrangement    | <HisyeoText>yôcno        </HisyeoText> |                   |
 | Available / Free      | <HisyeoText>în monodo    </HisyeoText> | Meetable          |
 | Busy / Occupied       | <HisyeoText>xîyôcû       </HisyeoText> | Have plans        |
-| To Change             | <HisyeoText>xe lî êo bêsu</HisyeoText> | To make different |
+| To Change             | <HisyeoText>xe li êo bêsu</HisyeoText> | To make different |
 | To Cancel             | <HisyeoText>xe nîltûgu   </HisyeoText> | To stop / To end  |
 
 ### Making an Appointment
