--- a/docs/lessons/religion.mdx
+++ b/docs/lessons/religion.mdx
@@ -350,10 +350,10 @@ itself. Learn more about Hûlicîn [here](/docs/religion/gods/hûlicîn).
 
 <HisyeoTabs>
     <p>nôkso li hûdul; tîton li kon momokî.&emsp;<em>The map is a lie, the path is a surprise.</em></p>
-    <p>kûu helgo kon zîgîl xe li êo dês doknû ôlê kon dêko nêos.&emsp;<em>Praise the fall that reveals a new view.</em></p>
-    <p>kûu helgo zinkon în besol xe buswen êo tîton nêos.&emsp;<em>Praise the locked door that forces a new way.</em></p>
+    <p>kûu helgo kon zîgîl xe li êo dês doknû ôlê kon dêko nêôs.&emsp;<em>Praise the fall that reveals a new view.</em></p>
+    <p>kûu helgo zinkon în besol xe buswen êo tîton nêôs.&emsp;<em>Praise the locked door that forces a new way.</em></p>
     <p>noyo wêko wowoê noyo hoî fos li yôk kon belêxu tîton.&emsp;<em>I place my foot where there is no trail.</em></p>
-    <p>noyo onkûol hoôs nênko fos ni li motûo yê môî uyo nêos.&emsp;<em>I embrace the chaos, for it is the parent of all new things.</em></p>
+    <p>noyo onkûol hoôs nênko fos ni li motûo yê môî uyo nêôs.&emsp;<em>I embrace the chaos, for it is the parent of all new things.</em></p>
     <p>wûôt kûu li foko sunyotnî lôtfen.&emsp;<em>May the journey be interesting.</em></p>
 </HisyeoTabs>
 
