--- a/docs/lessons/trips-and-tours.mdx
+++ b/docs/lessons/trips-and-tours.mdx
@@ -29,7 +29,7 @@ While we honor the earth, sometimes we must fly like a bird (tîmîok) to cross 
 
 <HisyeoTabs>
     <p>nûs kûu li nô ilik oûtô xîkô.&emsp;<em>Let's go inside the airplane.</em></p>
-    <p>wûôt xîkô ke li cot êto.&emsp;<em>The flight will be very long (thick).</em></p>
+    <p>wûôt xîkô ke li côt êto.&emsp;<em>The flight will be very long (thick).</em></p>
 </HisyeoTabs>
 
 ## Cultural Respect
@@ -38,7 +38,7 @@ In Hîsyêô culture, visiting a foreign land is an exercise in Empathy ([Bostet
 
 **Listen First:** Use <HisyeoWord is='fôgîcîn'/> (curiosity). Ask questions rather than making judgments.
 
-**Adapt:** Try to follow local customs. <HisyeoText>noyo fôlun xe tûu misli nîmû</HisyeoText> (I want to do as you do).
+**Adapt:** Try to follow local customs. <HisyeoText>noyo fôlun xe tûu misli nîmû&emsp;<small>(I want to do as you do).</small></HisyeoText>
 
 **Gratitude:** Always show appreciation for hospitality.
 
