Add section about open/closed verbs

--- a/docs/language/word_types/verbs.mdx
+++ b/docs/language/word_types/verbs.mdx
@@ -64,6 +64,51 @@ clauses where the head noun is the patient/theme.
     <p>tômôs fos nîo golo&emsp;<em>The book that she reads.</em></p>
 </HisyeoTabs>
 
+## Open vs. Closed Verbs
+
+While Hîsyêô verbs belong to a single class (transitive), they can be described as **Open** or **Closed** based on their usage in a specific sentence.
+
+#### Closed Verbs
+
+A verb is **Closed** when its direct object slot is filled by an explicit noun phrase. The action has a defined target.
+
+<HisyeoTabs>
+    <p>noyo mokon kûôxi.&emsp;<small>(Closed)</small>&emsp;<em>I eat fruit.</em></p>
+</HisyeoTabs>
+
+#### Open Verbs
+
+A verb is **Open** when it does not have a direct object indicated. This "open slot" must be interpreted based on context:
+
+1. **In a Relative Clause:** The open slot refers to the head noun (the antecedent).
+
+2. **In a Subordinate Clause:** It may refer to an unmentioned pronoun or a contextual object. This is one strategy for overcoming the lack of passivity.
+
+    <HisyeoTabs>
+        <p>kûôxi ôfo li fos noyo mokon&emsp;<small>(Open)</small>&emsp;<em>This fruit is that which I am eating</em></p>
+        <p>kûôxi ôfo li fos mokon&emsp;<small>(Open)</small>&emsp;<em>This fruit is being eaten</em></p>
+    </HisyeoTabs>
+
+3. **In a Main Clause:** It indicates that the object is generic, unimportant, or that the verb should be interpreted intransitively (the action itself is the point).
+
+    <HisyeoTabs>
+        <p>noyo mokon&emsp;<small>(Open)</small>&emsp;<em>I am eating (food).</em></p>
+    </HisyeoTabs>
+
+:::warning Connectors & Prepositions
+
+Watch out for connectors, prepositions, and enders that can immediately follow a verb, it
+can look like the verb is closed but in reality, these words are explicitly
+indicating that the verb is open (since these words cannot act as objects).
+
+<HisyeoTabs>
+    <p>oksûn fos nîmû mokon, li mîstu.&emsp;<em>The meat that you are eating is rotten.</em></p>
+    <p>noyo lunsol lêkin û nîmû ogolol yôk foxo.&emsp;<em>I threw but you didn't catch!</em></p>
+    <p>nio kôto mût noyo bi cosnî.&emsp;<em>He spoke to me privately.</em></p>
+</HisyeoTabs>
+
+:::
+
 ## Prepositions
 
 ### Realis
