--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -129,7 +129,7 @@ write a few basic sentences.
 ### Sounds
 
 For more details on the sounds including the IPA representation, check out our [pronunciation sub-lesson](lessons/first-steps#pronunciation) or
-the [phonology reference](reference/phonology).
+the [phonology reference](language/phonology).
 
 #### Vowels
 <Tabs groupId="tenkîn-yê-yogô-lolû" queryString>
