Add bit about two slightly different affirmative question answering techniques

--- a/docs/language/questions.mdx
+++ b/docs/language/questions.mdx
@@ -56,6 +56,11 @@ In either case, you can also respond with "true" (<HisyeoWord is='hokîkî'/>) o
     <p>hûdul.&emsp;<em>"False."</em></p>
 </HisyeoTabs>
 
+For a more colloquial response, you may simply repeat the question particle
+(<HisyeoWord is='ko'/>) to mean "Yes." For an emphatic response (similar to
+"Sure!" or "Indeed!"), you can use the confirmation word (<HisyeoWord
+is='lôîcôk'/>) as an interjection.
+
 ## Propositive Questions
 
 A propositive question (in English, these don't have a specific form but involve
@@ -95,6 +100,11 @@ make more formal approval setnences by making use of the verb "to agree".
     <p>û nîmû ôlê zowo onô mokon êo hoî bitûn ôfo cî.&emsp;<em>"You will feed the dog tonight, sound good?"</em></p>
     <p>noyo wofok yôk nênko fos noyo kûu li nô mût dênêmêk yê zomo kîôsô noyo.&emsp;<em>"I do not agree because I must go to my team's practice."</em></p>
 </HisyeoTabs>
+
+Colloquially, you may simply respond with the particle (<HisyeoWord is='cî'/>)
+to mean "Okay." To express strong agreement or certainty (like "Certainly!"),
+you may use the confirmation word (<HisyeoWord is='lôîcôk'/>) as an
+interjection.
 
 ## Pro-Form Questions
 
