Add sociology sciences page

--- a/docs/sciences/sociology.mdx
+++ b/docs/sciences/sociology.mdx
@@ -12,8 +12,85 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 
 # Sociology
 
+Sociology is the study of zomî (society) and zomo (groups). In Hîsyêô, sociology
+is not just an academic observation but a tool for constructing the Great
+Weave—a society based on voluntary association rather than coercion.
 
+## Core Concepts
 
+| English     | Hîsyêô                                 | Literal Meaning               |
+|-------------|----------------------------------------|-------------------------------|
+| Society     | <HisyeoWord is='zomî'/>                | Society / Civilization        |
+| Group       | <HisyeoWord is='zomo'/>                | Group / Team                  |
+| Community   | <HisyeoText>zomo în niwos</HisyeoText> | Residential group             |
+| Culture     | <HisyeoWord is='kûngîyo'/>             | Traditionalness/Customariness |
+| Norm        | <HisyeoText>fûtsûn zomî</HisyeoText>   | Social rules                  |
+| Institution | <HisyeoWord is='kûngîyo'/>             | Organization / Enterprise     |
+
+## Social Structure
+
+Hîsyêô sociology analyzes how individuals form the collective "Weave".
+
+### The Family (The Smallest Knot)
+
+**Family:** <HisyeoWord is='hondon'/>
+
+**Parent:** <HisyeoWord is='motûo'/>
+
+**Sibling:** <HisyeoWord is='siskin'/>
+
+**Child:** <HisyeoWord is='mênyûu'/>
+
+### The Community (The Fabric)
+
+**Neighbor:** <HisyeoText>ônî niwos yê ûnhilun</HisyeoText> (The residing ones of the surrounding)
+
+**Stranger:** <HisyeoText>umo dês monodo</HisyeoText> (The unmet person)
+
+**Friend:** <HisyeoWord is='sûtûô'/>
+
+### Class & Hierarchy (The Shards)
+
+Hîsyêô sociology views class stratification as a "Shard" of the First Law.
+
+**Class:** <HisyeoText>cêô umo</HisyeoText> (People rank)
+
+**Elite:** <HisyeoText>cêô cên</HisyeoText> (High rank)
+
+**Worker:** <HisyeoWord is='kukwon'/>
+
+<HisyeoTabs>
+    <p>cêô umo kôs gûexo.&emsp;<em>Classes create conflict.</em></p>
+</HisyeoTabs>
+
+## Social Dynamics
+
+How do groups interact and change?
+
+**Solidarity:** <HisyeoText>kotilmok yoldûn yê umo dîzel</HisyeoText> (Aid contributing of other people)
+
+**Conflict:** <HisyeoWord is='gûexo'/>
+
+**Cooperation:** <HisyeoText>kotilmok xe til xokôn dîzel</HisyeoText> (Working each other/together)
+
+**Assimilation:** <HisyeoText>kon gomî yê dondun</HisyeoText> (Taking of culture) - Often viewed negatively as erasing multiplicity.
+
+**Integration:** <HisyeoText>kon ûnîdû yê cizî losol</HisyeoText> (Joining of original self) - Viewed positively as adding threads to the Weave.
+
+## Cultural Theory
+
+**Values:** <HisyeoText>wîlûwo zomî</HisyeoText> (Social value/cost)
+
+**Taboo:** <HisyeoText>tûu dês cûlosun</HisyeoText> (Unallowed action)
+
+**Ritual:** <HisyeoText>tûu kôdus</HisyeoText> (Sacred act)
+
+## Social Change
+
+Sociologists study how societies evolve over <HisyeoWord is='wokût'/> <HisyeoWord is='côt'/> (a "long" time).
+
+<HisyeoTabs>
+    <p>zomî dî bêsu nênko fos tolîko kon oncêmon nûs dî bêsu.&emsp;<em>Society changes because our perspective changes.</em></p>
+</HisyeoTabs>
 
 <HisyeoTooltip />
-
